--- a/scratch.html
+++ b/scratch.html
@@ -14,13 +14,18 @@
     </h1></div>
 
 <br>
-    <a class="shift1" href="https://onepiece.fandom.com/wiki/Straw_Hat_Pirates" target="_blank">One Piece Wiki: Straw Hat Pirates</a>
-    <h6> Page created by Ambrose A.</h6>
+<div class="shift11">
+    <h6 class="h6edited"> Page created by Ambrose A.</h6>
     <h6 class="h6edited"> Straw Hat Crew Bounties after Wano</h6>
-    
-    <iframe class="img2 align" width="400" height="215" src="https://www.youtube.com/embed/OmkQOY8410k?si=gbpp1iBrzQ4bhZLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
- <br>
- <a class="shift3" href="#Member"> Click here to see the 11th Member of the Straw Hat Crew</a>
+</div>
+    <a class="shift3" href="#Member"> Click here to see the 11th Member of the Straw Hat Crew</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center><iframe class="img2 align" width="400" height="215" src="https://www.youtube.com/embed/OmkQOY8410k?si=gbpp1iBrzQ4bhZLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+    <center><a class= "shift12" href="https://onepiece.fandom.com/wiki/Straw_Hat_Pirates" target="_blank">One Piece Wiki: Straw Hat Pirates</a></center>
+ 
  <br>
  <br>
  <br>
