--- a/startbootstrap-full-width-pics-gh-pages/index.html
+++ b/startbootstrap-full-width-pics-gh-pages/index.html
@@ -33,7 +33,7 @@
             <div class="text-center my-5">
                 
                 <h1 class="text-white fs-3 fw-bolder">The Life of Ambrose</h1>
-                <p class="text-white-50 mb-0">Born in the Philippines, Grown in the Mainland, Served in Hawaii</p>
+                <p class="text-white mb-0">Born in the Philippines, Grown in the Mainland, Served in Hawaii</p>
             </div>
         </header>
         <!-- Content section-->
