--- a/startbootstrap-full-width-pics-gh-pages/index.html
+++ b/startbootstrap-full-width-pics-gh-pages/index.html
@@ -124,6 +124,14 @@
                         <br>▪	Helped F500 companies indirectly by creating a list of common practices  asset activation for increased demand
                         <br>▪	Managing a team of 5 throughout the project by ensuring effective communication and a positive environment
                     </li>
+                    <li><b>Firehouse Subs, Team Member, Apr 2021 - Jul 2021</b>
+                        <br>▪	Accounted for $3,000 of daily shift revenue for franchisee use through the counting and recording of cash and credit sales
+                        <br>▪	Coordinated with a team of up to 4 individuals, providing sandwiches 5-8 minutes after a customer's placed order
+                    </li>
+                    <li><b>Roseville Joint Union High School District, Peer-to-Peer Tutor, Sep 2018 - Feb 2020</b>
+                        <br>▪	Tutored students individually by communicating academic and mathematical ideas in a more digestible and simple way
+                        <br>▪	Promoted a positive learning environment through attentive listening, explaining, and relationship abilities
+                    </li>
                 </ul>
                 <br>
                 <p class="lead">Volunteer Experience:</p>
